[package]
name = "contract-signature"
version = "0.1.0"
edition = "2024"

[workspace]
members = [".", "examples/yew-demo", "examples/leptos-demo"]
resolver = "3"


[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
yew = ["dep:yew"]
leptos = ["dep:leptos"]

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
  "Window",
  "Document",
  "HtmlCanvasElement",
  "CanvasRenderingContext2d",
  "Element",
  "HtmlElement",
  "DomRect",
  "console",
  "MouseEvent",
  "PointerEvent",
  "CssStyleDeclaration",
] }

js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
# TODO: go to 
# masterror = "0.1"

thiserror = "2"

# Опционально под конкретные UI
yew = { version = "0.21", optional = true, default-features = false, features = [
  "csr",
] }
leptos = { version = "0.8", optional = true, default-features = false, features = [
  "csr",
] }
