[package]
name = "leptos-demo"
version = "0.1.0"
edition = "2024"

[dependencies]
wasm-bindgen = "0.2"
leptos = { version = "0.8", features = ["csr"], default-features = false }
web-sys = { version = "0.3", features = [
  "Window",
  "Document",
  "Element",
  "HtmlElement",
  "HtmlInputElement",
] }

# тянем локальный крейт с feature = "leptos"
contract-signature = { path = "../..", features = ["leptos"] }
