[package]
name = "yew-demo"
version = "0.1.0"
edition = "2024"

[dependencies]
wasm-bindgen = "0.2"
yew = { version = "0.21", default-features = false, features = ["csr"] }
web-sys = { version = "0.3", features = [
  "Window",
  "Document",
  "Element",
  "HtmlElement",
  "HtmlInputElement",
  "HtmlButtonElement",
  "HtmlCanvasElement",
  "HtmlImageElement",
] }
contract-signature = { path = "../..", features = ["yew"] }
